src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_Today_Future__c</fullName>
        <formula>IF( CloseDate =  TODAY() , &apos;Today and its 0 days close&apos;, IF( CloseDate &lt;  TODAY() , &apos;Past was closed &apos; &amp; TEXT(ABS(CloseDate-TODAY())) &amp; &apos; ago&apos;, &apos;Future to close&apos; &amp; TEXT(CloseDate-TODAY()) )   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past Today Future</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trim_Opportunity_Name__c</fullName>
        <formula>MID(   Name ,  4  ,   LEN(Name) -6  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trim Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validate_picklist_Web__c</fullName>
        <formula>IF( TEXT(LeadSource) == &apos;Web&apos;,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validate picklist Web</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>High_Probability_Opportunities</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Proposal/Price Quote</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.PROBABILITY</field>
            <operation>greaterOrEqual</operation>
            <value>50.0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Negotiation/Review</value>
        </filters>
        <label>High Probability Opportunities</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>